[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0

[node name="Connect" type="VBoxContainer" parent="."]
margin_left = 407.0
margin_top = 240.0
margin_right = 617.0
margin_bottom = 360.0

[node name="Title" type="Label" parent="Connect"]
margin_right = 210.0
margin_bottom = 14.0
text = "UNO Party"
align = 1

[node name="Panel" type="PanelContainer" parent="Connect"]
margin_top = 18.0
margin_right = 210.0
margin_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="Connect/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 203.0
margin_bottom = 95.0

[node name="Label2" type="Label" parent="Connect/Panel/VBoxContainer"]
margin_right = 196.0
margin_bottom = 14.0
text = "Nickname"

[node name="HBoxContainer" type="HBoxContainer" parent="Connect/Panel/VBoxContainer"]
margin_top = 18.0
margin_right = 196.0
margin_bottom = 42.0

[node name="NameEdit" type="LineEdit" parent="Connect/Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 100.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )

[node name="HostButton" type="Button" parent="Connect/Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 104.0
margin_right = 196.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Create lobby"

[node name="Label" type="Label" parent="Connect/Panel/VBoxContainer"]
margin_top = 46.0
margin_right = 196.0
margin_bottom = 60.0
text = "IP"

[node name="HBoxContainer2" type="HBoxContainer" parent="Connect/Panel/VBoxContainer"]
margin_top = 64.0
margin_right = 196.0
margin_bottom = 88.0

[node name="IPEdit" type="LineEdit" parent="Connect/Panel/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_right = 118.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "127.0.0.1"

[node name="JoinButton" type="Button" parent="Connect/Panel/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 122.0
margin_right = 196.0
margin_bottom = 24.0
text = "Join lobby"

[node name="Players" type="VBoxContainer" parent="."]
visible = false
margin_left = 478.0
margin_top = 284.0
margin_right = 545.0
margin_bottom = 316.0

[node name="Title" type="Label" parent="Players"]
margin_right = 130.0
margin_bottom = 14.0
text = "UNO Party"
align = 1

[node name="Panel" type="PanelContainer" parent="Players"]
margin_top = 18.0
margin_right = 130.0
margin_bottom = 224.0

[node name="VBoxContainer" type="VBoxContainer" parent="Players/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 123.0
margin_bottom = 199.0

[node name="Title" type="Label" parent="Players/Panel/VBoxContainer"]
margin_right = 116.0
margin_bottom = 14.0
text = "Awaiting players..."

[node name="PlayerList" type="ItemList" parent="Players/Panel/VBoxContainer"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 116.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 150 )

[node name="StartButton" type="Button" parent="Players/Panel/VBoxContainer"]
unique_name_in_owner = true
margin_top = 172.0
margin_right = 116.0
margin_bottom = 192.0
text = "Start"
